--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "@cap-js/hana": "^1",
     "@sap/cds": "^8",
-    "express": "^4",
     "@sap/xssec": "^4",
-    "@cap-js/hana": "^1"
+    "express": "^4",
+    "nodemailer": "^7.0.3"
   },
   "devDependencies": {
     "@cap-js/cds-types": "^0.10.0",
