--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@cap-js/hana": "^1",
     "@sap/cds": "^8",
+    "@sap/cds-sqlite": "^1.24.1",
     "@sap/xssec": "^4",
     "express": "^4",
     "nodemailer": "^7.0.3"
@@ -22,10 +23,19 @@
   },
   "cds": {
     "requires": {
-      "auth": "mocked"
+      "auth": "mocked",
+      "db": {
+        "kind": "sqlite",
+        "model": ["db"],
+        "credentials": {
+          "database": "db.sqlite"
+        }
+      }
     },
     "sql": {
       "native_hana_associations": false
     }
   }
 }
+ 
+ 
